--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,49 +1,58 @@
-name: Playwright UI Tests
+name: Playwright Tests
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        java-version: ['21']
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Setup Java 21
+        uses: actions/setup-java@v4
         with:
-          java-version: '21'
           distribution: 'temurin'
-          cache: maven
+          java-version: '21'
+          cache: 'maven'
 
-      - name: Install dependencies
-        run: mvn clean install -DskipTests
-
-      - name: Run Playwright tests
-        run: mvn test
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v3
+      - name: Setup Maven
+        uses: actions/setup-java@v4
         with:
-          name: test-results
-          path: |
-            target/surefire-reports/
-            videos/
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Install Playwright Browsers
+        run: mvn exec:java -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install --with-deps"
+
+      - name: Run Playwright Tests
+        run: mvn test
+        env:
+          CI: true
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: target/surefire-reports/
           retention-days: 30
 
-      - name: Publish test report
+      - name: Upload Test Videos
         if: always()
-        uses: EnricoMi/publish-unit-test-result-action@v2
+        uses: actions/upload-artifact@v4
         with:
-          files: target/surefire-reports/*.xml
-          check_name: 'UI Test Results'
+          name: test-videos
+          path: videos/
+          retention-days: 30
