--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,49 +10,27 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Java 21
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'maven'
 
-      - name: Setup Maven
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Install Playwright Browsers
-        run: mvn exec:java -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install --with-deps"
-
-      - name: Run Playwright Tests
-        run: mvn test
+      - name: Run tests
+        run: mvn test --batch-mode
         env:
-          CI: true
+          MAVEN_OPTS: "-Xmx2048m"
 
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: target/surefire-reports/
-          retention-days: 30
-
-      - name: Upload Test Videos
+      - name: Upload videos
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-videos
           path: videos/
           retention-days: 30
+          if-no-files-found: ignore
