--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright UI Tests
 
 on:
   push:
@@ -7,34 +7,41 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
-    timeout-minutes: 60
+  ui-test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@v4
+      # -------------------------------------------------
+      # 1. Checkout code
+      # -------------------------------------------------
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Java 21
+      # -------------------------------------------------
+      # 2. Set up JDK (Maven needs Java)
+      # -------------------------------------------------
+      - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
-          cache: 'maven'
+          distribution: temurin
+          java-version: 11
+          cache: maven
 
-      - name: Display Java version
-        run: java -version
+      # -------------------------------------------------
+      # 3. Install Playwright browsers (headless)
+      # -------------------------------------------------
+      - name: Install Playwright dependencies
+        run: |
+          mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install-deps"
+          mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install"
 
-      - name: Run tests with debug
-        run: mvn test -X
+      # -------------------------------------------------
+      # 4. Run the tests (headless, record video for artifact)
+      # -------------------------------------------------
+      - name: Run Playwright tests
         env:
-          CI: true
-
-
-      - name: Upload test videos
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-videos
-          path: videos/
-          retention-days: 30
-          if-no-files-found: ignore
+          # Force headless mode
+          HEADLESS: true
+        run: |
+          mvn -B -Dheadless=${HEADLESS} clean verify
