Fix GitHub Actions for Playwright test

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   ui-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04  # Pin to 22.04 to avoid Ubuntu 24.04 t64 package issues
     timeout-minutes: 15
 
     steps:
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       # -------------------------------------------------
-      # 2. Set up JDK (Maven needs Java)
+      # 2. Set up JDK 11 (Playwright + Maven)
       # -------------------------------------------------
       - name: Set up JDK 11
         uses: actions/setup-java@v4
@@ -29,19 +29,58 @@ jobs:
           cache: maven
 
       # -------------------------------------------------
-      # 3. Install Playwright browsers (headless)
+      # 3. Cache Maven dependencies (speeds up builds)
       # -------------------------------------------------
-      - name: Install Playwright dependencies
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      # -------------------------------------------------
+      # 4. Pre-install common dependencies (avoids some apt errors)
+      # -------------------------------------------------
+      - name: Install system dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg libasound2 libx264 libffi-dev libicu70  # Fallback packages
+
+      # -------------------------------------------------
+      # 5. Install Playwright browsers + deps
+      # -------------------------------------------------
+      - name: Install Playwright
+        run: |
+          # Use latest version (1.45+ for better Ubuntu support)
+          mvn dependency:get -Dartifact=com.microsoft.playwright:playwright:LATEST -Ddest=playwright.jar
+          # Install browsers and deps
           mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install-deps"
           mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install"
 
       # -------------------------------------------------
-      # 4. Run the tests (headless, record video for artifact)
+      # 6. Run tests (headless)
       # -------------------------------------------------
       - name: Run Playwright tests
         env:
-          # Force headless mode
           HEADLESS: true
         run: |
           mvn -B -Dheadless=${HEADLESS} clean verify
+
+      # -------------------------------------------------
+      # 7. Upload test results and videos
+      # -------------------------------------------------
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: target/surefire-reports/
+          retention-days: 7
+
+      - name: Upload videos
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-videos
+          path: videos/**
+          retention-days: 7
