--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,57 +8,81 @@ on:
 
 jobs:
   ui-test:
-    runs-on: ubuntu-22.04  # Pin to 22.04 to avoid Ubuntu 24.04 t64 package issues
+    runs-on: ubuntu-22.04
     timeout-minutes: 15
 
     steps:
       # -------------------------------------------------
-      # 1. Checkout code
+      # 1. Checkout
       # -------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
 
       # -------------------------------------------------
-      # 2. Set up JDK 11 (Playwright + Maven)
+      # 2. Set up **Java 21** (matches your pom.xml)
       # -------------------------------------------------
-      - name: Set up JDK 11
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 11
+          java-version: 21
           cache: maven
 
       # -------------------------------------------------
-      # 3. Cache Maven dependencies (speeds up builds)
+      # 3. Install ONLY the system packages Chromium needs
       # -------------------------------------------------
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      # -------------------------------------------------
-      # 4. Pre-install common dependencies (avoids some apt errors)
-      # -------------------------------------------------
-      - name: Install system dependencies
+      - name: Install Chromium system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg libasound2 libx264 libffi-dev libicu70  # Fallback packages
+          sudo apt-get update -qq
+          sudo apt-get install -y \
+            ca-certificates \
+            fonts-liberation \
+            libasound2 \
+            libatk-bridge2.0-0 \
+            libatk1.0-0 \
+            libc6 \
+            libcairo2 \
+            libcups2 \
+            libdbus-1-3 \
+            libexpat1 \
+            libfontconfig1 \
+            libgbm1 \
+            libglib2.0-0 \
+            libgtk-3-0 \
+            libnspr4 \
+            libnss3 \
+            libpango-1.0-0 \
+            libpangocairo-1.0-0 \
+            libstdc++6 \
+            libx11-6 \
+            libx11-xcb1 \
+            libxcb1 \
+            libxcomposite1 \
+            libxcursor1 \
+            libxdamage1 \
+            libxext6 \
+            libxfixes3 \
+            libxi6 \
+            libxrandr2 \
+            libxrender1 \
+            libxss1 \
+            libxtst6 \
+            lsb-release \
+            wget \
+            xdg-utils \
+            libx264-155 \
+            ffmpeg
 
       # -------------------------------------------------
-      # 5. Install Playwright browsers + deps
+      # 4. Install **only Chromium** (skip install-deps)
       # -------------------------------------------------
-      - name: Install Playwright
+      - name: Install Playwright Chromium
         run: |
-          # Use latest version (1.45+ for better Ubuntu support)
-          mvn dependency:get -Dartifact=com.microsoft.playwright:playwright:LATEST -Ddest=playwright.jar
-          # Install browsers and deps
-          mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install-deps"
-          mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI -Dexec.args="install"
+          mvn exec:java -e -Dexec.mainClass=com.microsoft.playwright.CLI \
+            -Dexec.args="install chromium"
 
       # -------------------------------------------------
-      # 6. Run tests (headless)
+      # 5. Run tests (headless)
       # -------------------------------------------------
       - name: Run Playwright tests
         env:
@@ -67,20 +91,20 @@ jobs:
           mvn -B -Dheadless=${HEADLESS} clean verify
 
       # -------------------------------------------------
-      # 7. Upload test results and videos
+      # 6. Upload artifacts (videos + Surefire reports)
       # -------------------------------------------------
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: target/surefire-reports/
-          retention-days: 7
-
       - name: Upload videos
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: playwright-videos
           path: videos/**
+          retention-days: 7
+
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: surefire-reports
+          path: target/surefire-reports/
           retention-days: 7
