--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,15 +12,9 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      # -------------------------------------------------
-      # 1. Checkout
-      # -------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # -------------------------------------------------
-      # 2. Set up **Java 21** (matches your pom.xml)
-      # -------------------------------------------------
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -29,10 +23,13 @@ jobs:
           cache: maven
 
       # -------------------------------------------------
-      # 3. Install ONLY the system packages Chromium needs
+      # 1. Enable universe repo + install Chromium deps
       # -------------------------------------------------
       - name: Install Chromium system dependencies
         run: |
+          sudo apt-get update -qq
+          sudo apt-get install -y software-properties-common
+          sudo add-apt-repository universe -y
           sudo apt-get update -qq
           sudo apt-get install -y \
             ca-certificates \
@@ -40,7 +37,6 @@ jobs:
             libasound2 \
             libatk-bridge2.0-0 \
             libatk1.0-0 \
-            libc6 \
             libcairo2 \
             libcups2 \
             libdbus-1-3 \
@@ -74,7 +70,7 @@ jobs:
             ffmpeg
 
       # -------------------------------------------------
-      # 4. Install **only Chromium** (skip install-deps)
+      # 2. Install only Chromium (skip install-deps)
       # -------------------------------------------------
       - name: Install Playwright Chromium
         run: |
@@ -82,7 +78,7 @@ jobs:
             -Dexec.args="install chromium"
 
       # -------------------------------------------------
-      # 5. Run tests (headless)
+      # 3. Run tests (headless)
       # -------------------------------------------------
       - name: Run Playwright tests
         env:
@@ -91,7 +87,7 @@ jobs:
           mvn -B -Dheadless=${HEADLESS} clean verify
 
       # -------------------------------------------------
-      # 6. Upload artifacts (videos + Surefire reports)
+      # 4. Upload artifacts
       # -------------------------------------------------
       - name: Upload videos
         if: always()
